fix card page ios layout issue

--- a/apps/abenson/src/app/card/containers/card/card.component.scss
+++ b/apps/abenson/src/app/card/containers/card/card.component.scss
@@ -83,8 +83,6 @@ perx-core-loyalty-transactions-list ::ng-deep {
 }
 
 .branding-image {
-  display: flex;
-  justify-content: center;
 
   img {
     width: 100%;
